clusters/home/infrastructure/gateway/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: observability
spec:
  hostnames:
    - grafana.local
    - grafana.oelsner.local
  parentRefs:
    - name: default-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-grafana
          port: 80
