clusters/home/infrastructure/gateway/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: observability
spec:
  hostnames:
    - prometheus.local
    - prometheus.oelsner.local
  parentRefs:
    - name: default-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
